--- a/ipybd/label/label_format.css
+++ b/ipybd/label/label_format.css
@@ -5,7 +5,7 @@ html {
 
 body{
   color: black;
-  margin: 15px;
+  margin: 0px 10px;
   padding: 0;
   font-size: 9.5px;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, "SimSun", serif;
@@ -18,21 +18,23 @@ body{
 
 article {
   flex-basis: 45%;
-  padding: 10px;
-  margin-bottom: 10px;
+  padding: 10px 10px 0px 10px;
+  /*margin-bottom: 10px;*/
   page-break-inside: avoid;
-  line-height: 1.5;
+  line-height: 1.4;
 }
 
 h1 {
   font-family: SimHei, STXihei, "MicrosoftJhengHei", STHeiti, MingLiu;
   font-size: 14px;
+	line-height: 1.1;
   text-align: center;
 }
 
 h2 {
   font-variant: small-caps;
   font-size: 10px;
+	line-height: 1.2;
   text-align: center;
 }
 
@@ -41,7 +43,13 @@ h2 {
 }
 
 .label-item {
-	min-height: 100px
+  min-height: 100px
+}
+
+img {
+  height: 45px;
+  display: block;
+  margin: -3px -10px 0 auto;
 }
 
 footer{
@@ -52,19 +60,25 @@ footer{
 }
 
 @media print {
-	body {
-		display: block;
-	}
+body {
+display: block;
+}
 
-	.item-wrapper {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, auto);
-    grid-column-gap: 20px;
-	page-break-after: always;
-	}
+.item-wrapper {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(3, auto) !important;
+grid-column-gap: 10px;
+page-break-after: always;
+}
+article:nth-child(Odd) {
+  border-right: 1px dashed rgb(230, 230, 230);
+}
+article:nth-child(n+2) {
+  border-top: 1px dashed rgb(230, 230, 230);
+}
 
-  article:nth-child(6n) {
-    page-break-after: always;
-  }
+article:nth-child(6n) {
+page-break-after: always;
+}
 }
