改善标签条形码字体偏小的问题

--- a/ipybd/label/label_format.css
+++ b/ipybd/label/label_format.css
@@ -25,7 +25,7 @@ article {
 }
 
 h1 {
-  font-family: SimHei, STXihei, "MicrosoftJhengHei", STHeiti, MingLiu;
+  font-family: SimHei, STXihei, "MicrosoftJhengHei", STHeiti, MingLiu, "Palatino Linotype", "Book Antiqua", Palatino, "SimSun", serif;
   font-size: 14px;
 	line-height: 1.1;
   text-align: center;
