修复标签打印若干Bug

--- a/ipybd/label/cryptoflora.css
+++ b/ipybd/label/cryptoflora.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 h2 {
-  font-variant: small-caps;
+  font-variant: normal;
   font-size: 10px;
   line-height: 1.2;
   text-align: center;
