优化标签样式

--- a/ipybd/label/flora.css
+++ b/ipybd/label/flora.css
@@ -32,9 +32,9 @@ h1 {
 }
 
 h2 {
-  font-variant: normal;
+  font-variant: small-caps;
   font-size: 10px;
-	line-height: 1.2;
+  line-height: 1.2;
   text-align: center;
 }
 
