让标签打印适应不同纸张
1. 标签可以自行制定单页行列数；
2.可以根据指定的纸张高度自动等分各个标签；
3.优化了英文植物标签的样式；
4.CSS 样式将写入生成的文件夹，满足用户自行调整或打包分享输出文件的需求。
5.其他一些注释补充和测试补充。

--- a/ipybd/label/plants_en.css
+++ b/ipybd/label/plants_en.css
@@ -1,11 +1,11 @@
 html {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 body{
   color: black;
-  margin: 15px;
+  margin: 0px;
   padding: 0;
   font-size: 9.5px;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -18,10 +18,10 @@ body{
 
 article {
   flex-basis: 45%;
-  padding: 10px;
-  margin-bottom: 10px;
+  padding: 10px 20px 0px 20px;
   page-break-inside: avoid;
   line-height: 1.2;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -37,10 +37,6 @@ h2 {
   text-align: center;
 }
 
-.label-item {
-	min-height: 100px
-}
-
 footer{
   font-size: flex;
   font-style: bold;
@@ -48,20 +44,3 @@ footer{
   text-align: center;
 }
 
-@media print {
-	body {
-		display: block;
-	}
-
-	.item-wrapper {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, auto);
-  grid-column-gap: 20px;
-	page-break-after: always;
-	}
-
-  article:nth-child(6n) {
-    page-break-after: always;
-  }
-}
