--- a/ipybd/label/flora.css
+++ b/ipybd/label/flora.css
@@ -1,16 +1,16 @@
 html {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 body{
   color: black;
-  margin: 0px 10px;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-size: 9.5px;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, "SimSun", serif;
-	line-height: 1.2;
-	display: flex;
+  line-height: 1.2;
+  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -18,10 +18,11 @@ body{
 
 article {
   flex-basis: 45%;
-  padding: 10px 10px 0px 10px;
+  padding: 10px 17px 0px 17px;
   /*margin-bottom: 10px;*/
   page-break-inside: avoid;
   line-height: 1.4;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -42,43 +43,8 @@ h2 {
   font-family: SimHei, STXihei, "MicrosoftJhengHei", STHeiti, MingLiu;
 }
 
-.label-item {
-  min-height: 100px
-}
-
 img {
   height: 45px;
   display: block;
-  margin: -3px -10px 0 auto;
-}
-
-footer{
-  font-size: flex;
-  font-style: bold;
-  font-variant: small-caps;
-  text-align: center;
-}
-
-@media print {
-body {
-display: block;
-}
-
-.item-wrapper {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: repeat(3, auto) !important;
-grid-column-gap: 10px;
-page-break-after: always;
-}
-article:nth-child(Odd) {
-  border-right: 1px dashed rgb(230, 230, 230);
-}
-article:nth-child(n+2) {
-  border-top: 1px dashed rgb(230, 230, 230);
-}
-
-article:nth-child(6n) {
-page-break-after: always;
-}
+  margin: -3px -8px 0 auto;
 }
