--- a/ipybd/label/bjm_cryptoflora.mustache
+++ b/ipybd/label/bjm_cryptoflora.mustache
@@ -1,11 +1,11 @@
 <article class="label-item">
-  <h1>{{labelTitle}}{{#labelNote}}（{{labelNote}}）{{/labelNote}}{{#code_path}}<span style="float:right;"><img src={{code_path}}></span>{{/code_path}}</h1>
-  <h2>{{labelSubtitle}}</h2>
-  <p>{{#family}}<b>{{family}}</b>{{/family}}</p>
-  <p><b>{{#chineseName}}{{chineseName}}，{{/chineseName}}<i>{{genus}} {{specificEpithet}}</i>{{#taxonRank}} {{taxonRank}}{{/taxonRank}}<i> {{infraspecificEpithet}}</i> {{scientificNameAuthorship}}</b></p>
-  <p>{{recordNumber}}&nbsp;&nbsp;&nbsp;<span style="float:right;">{{#eventDate}}{{eventDate}}{{/eventDate}}</span></p>
-  <p><span class="title">采集地：</span>{{#country}}{{country}}，{{/country}}{{#province}}{{province}}，{{/province}}{{#prefecture}}{{prefecture}}，{{/prefecture}}{{#county}}{{county}}，{{/county}}{{#locality}}{{{locality}}}，{{/locality}}{{#habitat}}{{{habitat}}}{{/habitat}}</p>
-  <p>{{#molecularMaterialSample}}分子材料：{{molecularMaterialSample}}；{{/molecularMaterialSample}}{{#substrate}}基质：{{substrate}}；{{/substrate}}{{#lifeForm}}生活型：{{lifeForm}}；{{/lifeForm}}{{#abundance}}多度：{{abundance}}；{{/abundance}}{{#height}}体高：{{height}}；{{/height}}{{#DBH}}胸径：{{DBH}}；{{/DBH}}{{#reproductiveOrgans}}生殖器官：{{reproductiveOrgans}}；{{/reproductiveOrgans}}{{#leaf}}叶：{{leaf}}；{{/leaf}}{{#fruit}}果：{{fruit}}；{{/fruit}}{{#propagulum}}繁殖体：{{propagulum}}；{{/propagulum}}{{#stem}}茎：{{stem}}；{{/stem}}{{#root}}根：{{root}}；{{/root}}{{#adventitiousRoot}}不定根：{{adventitiousRoot}}；{{/adventitiousRoot}}{{#rhizoids}}假根：{{rhizoids}}；{{/rhizoids}}{{#host}}寄主：{{host}}；{{/host}}{{#verbatimIdentification}}野外鉴定：{{verbatimIdentification}}；{{/verbatimIdentification}}{{#vernacularName}}当地名称：{{vernacularName}}；{{/vernacularName}}{{#occurrenceRemarks}}备注：{{occurrenceRemarks}}{{/occurrenceRemarks}}</p>
-  <p><span class="title">采集人：</span>{{{recordedBy}}}</p>
-  <p><span class="title">海拔：</span>{{minimumElevationInMeters}}{{#maximumElevationInMeters}}-{{maximumElevationInMeters}}{{/maximumElevationInMeters}} m<span style="float:right;"><span class="title">经纬度：</span>{{#decimalLongitude}}{{decimalLongitude}}&deg;，{{/decimalLongitude}}{{#decimalLatitude}}{{decimalLatitude}}&deg;{{/decimalLatitude}}</span></p>
+  <h1>{{标签标题}}{{#标签备注}}（{{标签备注}}）{{/标签备注}}{{#code_path}}<span style="float:right;"><img src={{code_path}}></span>{{/code_path}}</h1>
+  <h2>{{标签副标题}}</h2>
+  <p>{{#拉丁科名}}<b>{{拉丁科名}}</b>{{/拉丁科名}}</p>
+  <p><b>{{#中文名}}{{中文名}}，{{/中文名}}<i>{{genus}} {{specificEpithet}}</i>{{#taxonRank}} {{taxonRank}}{{/taxonRank}}<i> {{infraspecificEpithet}}</i> {{scientificNameAuthorship}}</b></p>
+  <p>{{采集号}}&nbsp;&nbsp;&nbsp;<span style="float:right;">{{#采集日期}}{{采集日期}}{{/采集日期}}</span></p>
+  <p><span class="title">采集地：</span>{{#采集地国}}{{采集地国}}，{{/采集地国}}{{#采集地省}}{{采集地省}}，{{/采集地省}}{{#采集地市}}{{采集地市}}，{{/采集地市}}{{#采集地县}}{{采集地县}}，{{/采集地县}}{{#小地名}}{{{小地名}}}，{{/小地名}}{{#生境}}{{{生境}}}{{/生境}}</p>
+  <p>{{#分子材料}}分子材料：{{分子材料}}；{{/分子材料}}{{#基质}}基质：{{基质}}；{{/基质}}{{#习性}}生活型：{{习性}}；{{/习性}}{{#多度}}多度：{{多度}}；{{/多度}}{{#体高}}体高：{{体高}}；{{/体高}}{{#胸径}}胸径：{{胸径}}；{{/胸径}}{{#生殖器官}}生殖器官：{{生殖器官}}；{{/生殖器官}}{{#叶}}叶：{{叶}}；{{/叶}}{{#果实}}果：{{果实}}；{{/果实}}{{#繁殖体}}繁殖体：{{繁殖体}}；{{/繁殖体}}{{#茎}}茎：{{茎}}；{{/茎}}{{#根}}根：{{根}}；{{/根}}{{#不定根}}不定根：{{不定根}}；{{/不定根}}{{#假根}}假根：{{假根}}；{{/假根}}{{#寄主}}寄主：{{寄主}}；{{/寄主}}{{#历史鉴定}}野外鉴定：{{历史鉴定}}；{{/历史鉴定}}{{#当地名称}}当地名称：{{当地名称}}；{{/当地名称}}{{#备注}}备注：{{备注}}{{/备注}}</p>
+  <p><span class="title">采集人：</span>{{{采集人}}}</p>
+  <p><span class="title">海拔：</span>{{海拔}}{{#海拔高}}-{{海拔高}}{{/海拔高}} m<span style="float:right;"><span class="title">经纬度：</span>{{#经度}}{{经度}}&deg;，{{/经度}}{{#纬度}}{{纬度}}&deg;{{/纬度}}</span></p>
 </article>
