--- a/ipybd/label/bjm_painting.mustache
+++ b/ipybd/label/bjm_painting.mustache
@@ -1,9 +1,9 @@
 <article class="label-item">
-  <h1>{{labelTitle}}{{#labelNote}}（{{labelNote}}）{{/labelNote}}{{#code_path}}<span style="float:right;"><img src={{code_path}}></span>{{/code_path}}</h1>
-  <h2>{{labelSubtitle}}</h2>
-  <p>{{#chineseName}}<b>{{chineseName}}</b>{{/chineseName}}<span style="float:right;"><span class="title">分类号：</span>{{otherCatalogNumbers}}</span></p>
+  <h1>{{标签标题}}{{#标签备注}}（{{标签备注}}）{{/标签备注}}{{#code_path}}<span style="float:right;"><img src={{code_path}}></span>{{/code_path}}</h1>
+  <h2>{{标签副标题}}</h2>
+  <p>{{#中文名}}<b>{{中文名}}</b>{{/中文名}}<span style="float:right;"><span class="title">分类号：</span>{{分类号}}</span></p>
   <p><i>{{genus}} {{specificEpithet}}</i>{{#taxonRank}} {{taxonRank}}{{/taxonRank}}<i> {{infraspecificEpithet}}</i> {{scientificNameAuthorship}}</b></p>
-  <p><span class="title">创作人：</span>{{{creator}}}<span style="float:right;"><span class="title">创作日期：</span>{{#dateCreated}}{{dateCreated}}{{/dateCreated}}{{^dateCreated}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{/dateCreated}}</span></p>
-  <p>{{#verbatimLocality}}<span class="title">绘制地点：</span>{{verbatimLocality}}{{/verbatimLocality}}</p>
-  <p><span class="title">备注：</span>{{#recordedBy}}{{recordedBy}}{{/recordedBy}}{{#eventDate}}于{{eventdate}}{{/eventDate}}{{#locality}}采于{{locality}}。{{/locality}}{{#occurrenceRemarks}}{{occurrenceRemarks}}{{/occurrenceRemarks}}</p>
+  <p><span class="title">创作人：</span>{{{创作人}}}<span style="float:right;"><span class="title">创作日期：</span>{{#创作日期}}{{创作日期}}{{/创作日期}}{{^创作日期}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{/创作日期}}</span></p>
+  <p>{{#创作地点}}<span class="title">绘制地点：</span>{{创作地点}}{{/创作地点}}</p>
+  <p><span class="title">备注：</span>{{#采集人}}{{采集人}}{{/采集人}}{{#采集日期}}于{{采集日期}}{{/采集日期}}{{#小地名}}采于{{小地名}}。{{/小地名}}{{#备注}}{{备注}}{{/备注}}</p>
 </article>
