--- a/ipybd/label/bjm_fungi_simple.mustache
+++ b/ipybd/label/bjm_fungi_simple.mustache
@@ -1,5 +1,7 @@
 <article class="label-item">
-  <h1>{{#分类号}}{{分类号}}{{/分类号}}</h1>
+  <h1>{{标签标题}}</h1>
+  <h2>{{标签备注}}</h2>
+  <h2>{{#分类号}}{{分类号}}{{/分类号}}</h2>
   <p>{{#code_path}}<span style="margin: 0 auto"><img src={{code_path}}></span>{{/code_path}}</p>
   <h1>{{#中文名}}<b>{{中文名}}</b>{{/中文名}}</h1>
 </article>
