更新bjm药材标本标签

--- a/ipybd/label/bjm_medicine.mustache
+++ b/ipybd/label/bjm_medicine.mustache
@@ -4,11 +4,9 @@
   <p><span style="float:center;"><span class="title">分类号：</span>{{分类号}}</span></p>
   <p>{{中文名}}{{#中药拉丁名}}，{{中药拉丁名}}{{/中药拉丁名}}</span></p>
   <p>{{#功效}}<span class="title">功效：</span>{{功效}}</p>{{/功效}}
-  <p>{{#药用部位}}<span class="title">药用部位：</span>{{药用部位}}</p>{{/药用部位}}
-  <p>{{#化学成分}}<span class="title">化学成分：</span>{{化学成分}}</p>{{/化学成分}}
   <p>{{#出土地及年代}}<span class="title">出土地及年代:</span>{{出土地及年代}}</p>{{/出土地及年代}}
-  <p>{{#genus}}<span class="title">基原名：</span>{{#基原中文名}}{{基原中文名}}，{{/基原中文名}}<i>{{genus}} {{specificEpithet}}</i>{{#taxonRank}} {{taxonRank}}{{/taxonRank}}<i> {{infraspecificEpithet}}</i> {{scientificNameAuthorship}}{{/genus}}</p>
-  <p>{{#基原拉丁科名}}<span class="title">基原科名：</span>{{#基原中文科名}}{{基原中文科名}}，{{/基原中文科名}}{{基原拉丁科名}}{{/基原拉丁科名}}</p>
+  <p>{{#基原中文名}}<span class="title">基原名：</span>{{#基原中文名}}{{基原中文名}}，{{/基原中文名}}<i>{{genus}} {{specificEpithet}}</i>{{#taxonRank}} {{taxonRank}}{{/taxonRank}}<i> {{infraspecificEpithet}}</i> {{scientificNameAuthorship}}{{/基原中文名}}</p>
+  <p>{{#基原中文科名}}<span class="title">基原科名：</span>{{基原中文科名}}，{{基原拉丁科名}}{{/基原中文科名}}</p>
   <p>{{#采集人}}<span class="title">采集人：</span>{{采集人}}{{/采集人}}</p>
   <p>{{#采集号}}<span class="title">采集号：</span>{{采集号}}{{/采集号}}{{#采集日期}}<span style="float:right;"><span class="title">采集日期：</span>{{采集日期}}</span>{{/采集日期}}</p>
   <p><span class="title">采集地：</span>{{#采集地国}}{{采集地国}}{{/采集地国}}{{#采集地省}}，{{采集地省}}{{/采集地省}}{{#采集地市}}，{{采集地市}}{{/采集地市}}{{#采集地县}}，{{采集地县}}{{/采集地县}}{{#小地名}}，{{{小地名}}}{{/小地名}}{{#生境}}，{{{生境}}}{{/生境}}</p>
